--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>​درباره ما</title>
@@ -6,11 +6,11 @@
 <body>
     <h1>سلام به همه! به دنیای مَش لات خوش آمدید!</h1>
     <p>بازی مَش لات نه فقط یک بازی، بلکه دنیایی جدید و متفاوت است که با عشق و علاقه برای شما ساخته شده. اسم این بازی، مَش لات، از خود شخصیت اصلی بازی گرفته شده؛ یک اسم بامزه و خودمانی برای یک پو لاتی!</p>
-    <p>در این بازی، شما قرار است پو خودتان را با یک عالمه چیزهای جدید و هیجان‌انگیز بزرگ کنید. از غذاهای کاملاً جدید و خوشمزه ایرانی گرفته تا موسیقی‌های باحال و متنوع. ما تلاش کردیم حس و حال ایرانی را به این بازی اضافه کنیم، به همین خاطر غذاهایی مثل سیب زمینی کبابی، زولبیا و خیلی چیزهای دیگر را خواهید دید. در مورد موسیقی هم، علاوه بر آهنگ‌های ایرانی، کلی آهنگ فانک جذاب هم برای شما آماده کردیم تا حس و حال بازی همیشه تازه و پرانرژی بماند.</p>
+    <p>در این بازی، شما قرار است پو خودتان را با یک عالمه چیزهای جدید و هیجان‌انگیز بزرگ کنید. از غذاهای کاملاً جدید و خوشمزه ایرانی گرفته تا موسیقی‌های باحال و متنوع. ما تلاش کردیم حس و حال ایرانی را به این بازی اضافه کنیم، به همین خاطر غذاهایی مثل سیب زمینی کبابی، زولبیا و خیلی چیزهای دیگر را خواهید دید. در مورد موسیقی هم، علاوه بر آهنگ‌های ایرانی، کلی آهنگ فانک جذاب هم برای شما آماده کردیم تا حس و حال بازی همیشه تازه و پرانرژی بماند. در این بازی ما اسکیت بورد رو با یه موتور عوض کردیم، و کلی ماشین جدید و ایرانی اضافه کردیم!</p>
     <h2>بیشتر درمورد مشَ لات</h2>
     <p>همچنین، برای اینکه بازی جذاب‌تر شود، چندتا سورپرایز هم داریم! صداگذاری‌های بازی با الهام از بازی معروف ماینکرفت انجام شده و حتی چند تا از آیتم‌های غذایی ماینکرفت هم در بازی پیدا می‌کنید. این ترکیب عجیب و غریب اما باحال، مَش لات را از هر بازی دیگری متمایز می‌کند.
 ​توجه: این بازی به دلیل داشتن شوخی‌های کوچک و کلمات محدود، برای افراد بالای ۱۸ سال توصیه می‌شود.
-​این بازی با تلاش و خلاقیت من، مهدی۵۶۴۳، و دوست خوبم، سیقور، ساخته شده است. امیدواریم از بازی کردن با مَش لات لذت ببرید و ساعت‌ها باهاش سرگرم بشید.
+​این بازی با تلاش و خلاقیت من، Mahdi5643، و دوست خوبم، Segoor، ساخته شده است. امیدواریم از بازی کردن با مَش لات لذت ببرید و ساعت‌ها باهاش سرگرم بشید.
 ​با تشکر،
 تیم سازنده مَش لات</p>
 </body>
