--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>بیشتر درمورد مشَ لات</h2>
     <p>همچنین، برای اینکه بازی جذاب‌تر شود، چندتا سورپرایز هم داریم! صداگذاری‌های بازی با الهام از بازی معروف ماینکرفت انجام شده و حتی چند تا از آیتم‌های غذایی ماینکرفت هم در بازی پیدا می‌کنید. این ترکیب عجیب و غریب اما باحال، مَش لات را از هر بازی دیگری متمایز می‌کند.
 ​توجه: این بازی به دلیل داشتن شوخی‌های کوچک و کلمات محدود، برای افراد بالای ۱۸ سال توصیه می‌شود.
-​این بازی با تلاش و خلاقیت من، Mahdi5643، و دوست خوبم، Segoor، ساخته شده است. امیدواریم از بازی کردن با مَش لات لذت ببرید و ساعت‌ها باهاش سرگرم بشید.
+​این بازی با تلاش و خلاقیت من، مهدی۵۶۴۳، و دوست خوبم، سیقور، ساخته شده است. امیدواریم از بازی کردن با مَش لات لذت ببرید و ساعت‌ها باهاش سرگرم بشید.
 ​با تشکر،
 تیم سازنده مَش لات</p>
 </body>
