--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>​درباره ما</title>
+    <title>​سیاست حفظ حریم خصوصی</title>
 </head>
 <body>
-    <h1>سلام به همه! به دنیای مَش لات خوش آمدید!</h1>
-    <p>بازی مَش لات نه فقط یک بازی، بلکه دنیایی جدید و متفاوت است که با عشق و علاقه برای شما ساخته شده. اسم این بازی، مَش لات، از خود شخصیت اصلی بازی گرفته شده؛ یک اسم بامزه و خودمانی برای یک پو لاتی!</p>
-    <p>در این بازی، شما قرار است پو خودتان را با یک عالمه چیزهای جدید و هیجان‌انگیز بزرگ کنید. از غذاهای کاملاً جدید و خوشمزه ایرانی گرفته تا موسیقی‌های باحال و متنوع. ما تلاش کردیم حس و حال ایرانی را به این بازی اضافه کنیم، به همین خاطر غذاهایی مثل سیب زمینی کبابی، زولبیا و خیلی چیزهای دیگر را خواهید دید. در مورد موسیقی هم، علاوه بر آهنگ‌های ایرانی، کلی آهنگ فانک جذاب هم برای شما آماده کردیم تا حس و حال بازی همیشه تازه و پرانرژی بماند. در این بازی ما اسکیت بورد رو با یه موتور عوض کردیم، و کلی ماشین جدید و ایرانی اضافه کردیم!</p>
-    <h2>بیشتر درمورد مشَ لات</h2>
-    <p>همچنین، برای اینکه بازی جذاب‌تر شود، چندتا سورپرایز هم داریم! صداگذاری‌های بازی با الهام از بازی معروف ماینکرفت انجام شده و حتی چند تا از آیتم‌های غذایی ماینکرفت هم در بازی پیدا می‌کنید. این ترکیب عجیب و غریب اما باحال، مَش لات را از هر بازی دیگری متمایز می‌کند.
-​توجه: این بازی به دلیل داشتن شوخی‌های کوچک و کلمات محدود، برای افراد بالای ۱۸ سال توصیه می‌شود.
-​این بازی با تلاش و خلاقیت من، مهدی۵۶۴۳، و دوست خوبم، سیقور، ساخته شده است. امیدواریم از بازی کردن با مَش لات لذت ببرید و ساعت‌ها باهاش سرگرم بشید.
-​با تشکر،
-تیم سازنده مَش لات</p>
+    <h1>سلام و به بازی مَش لات خوش آمدید! حفظ حریم خصوصی شما برای ما اهمیت زیادی دارد. این سیاست توضیح می‌دهد که ما چه اطلاعاتی را جمع‌آوری می‌کنیم و چگونه از آن‌ها استفاده می‌کنیم تا بهترین تجربه بازی را برای شما فراهم کنیم.</h1>
+    <h2>اطلاعاتی که ما جمع آوری می کنیم</h2>
+<p>​در بازی مَش لات، ما برخی اطلاعات را برای ثبت نام و امکانات بیشتر از شما دریافت می‌کنیم. این اطلاعات شامل موارد زیر است:</p>
+<p>​نام کاربری پو: ما برای تشخیص و شناسایی پو شما در بازی، نامی که برای او انتخاب کرده‌اید را ذخیره می‌کنیم.</p>
+<p>​آدرس ایمیل: ایمیل شما برای ایجاد حساب کاربری، بازیابی رمز عبور و برقراری ارتباط با شما در مورد به‌روزرسانی‌های مهم بازی جمع‌آوری می‌شود.</p>
+<p>سال تولد: ما سال تولد شما را برای تأیید سن و اطمینان از اینکه بازی برای شما مناسب است، جمع‌آوری می‌کنیم.</p>
+<p>رمز عبور پو: رمز عبور شما برای محافظت از حساب کاربری‌تان و اطمینان از اینکه فقط شما به بازی‌تان دسترسی دارید، ذخیره می‌شود. ما از روش‌های رمزنگاری پیشرفته برای محافظت از رمز عبور شما استفاده می‌کنیم.</p>
+<p>کوکی‌ها و داده‌های کاربری: ما ممکن است از کوکی‌ها و فناوری‌های مشابه برای جمع‌آوری اطلاعاتی مانند نحوه استفاده شما از بازی استفاده کنیم. این اطلاعات به ما کمک می‌کنند تا عملکرد بازی را بهبود ببخشیم و باگ‌ها را رفع کنیم. این داده‌ها شامل اطلاعاتی مانند مدت زمان بازی، بخش‌هایی که بیشتر استفاده می‌کنید و مشکلات فنی احتمالی هستند.</p>
+<p>ما متعهد هستیم که این اطلاعات را فقط برای اهداف گفته شده استفاده کنیم و به هیچ عنوان آن‌ها را با دیگران به اشتراک نخواهیم گذاشت.</p>
+<h2>نحوه استفاده از اطلاعات</h2>
+<p>اطلاعات شخصی که جمع‌آوری می‌کنیم تنها برای موارد زیر استفاده می‌شوند:</p>
+<p>​ارائه خدمات بازی: برای ذخیره پیشرفت شما، امتیازات بالا و سایر فعالیت‌های درون بازی.</p>
+<p>​ارتباط با شما: برای اطلاع‌رسانی در مورد به‌روزرسانی‌های جدید، رویدادها و تغییرات مهم در بازی.</p>
+    <h2>امنیت اطلاعات</h2>
+    <p>ما تمام تلاش خود را می‌کنیم تا از اطلاعات شما محافظت کنیم. اطلاعات شما به صورت امن در سرورهای ما ذخیره می‌شوند و دسترسی به آن‌ها محدود و تحت کنترل است. ما از روش‌های امنیتی مناسب برای جلوگیری از دسترسی غیرمجاز، افشای اطلاعات یا تغییر آن‌ها استفاده می‌کنیم.</p>
+<h2>دسترسی شخص ثالث</h2>
+<p>ما هیچ اطلاعاتی را با شرکت‌های شخص ثالث، تبلیغ‌کنندگان یا ارائه‌دهندگان خدمات تحلیلی به اشتراک نمی‌گذاریم. اطلاعات بازی شما و اطلاعات حساب کاربری شما نزد ما محفوظ خواهد ماند.</p>
+<h2>ارتباط با ما</h2>
+<p>اگر در مورد سیاست حفظ حریم خصوصی ما سوالی دارید، یا یک اشکال در بازی پیدا کردید و میخواهید گزارش دهید، یا اگر هر نوع سوال دیگری هم دارید، لطفاً با ما در ارتباط باشید. می‌توانید برای ارتباط با ما <a href="mailto:amirabbashasanpour7@gmail.com">اینجا</a> را کلیک کنید.</p>
+<p>​از اینکه مَش لات را بازی می‌کنید، متشکریم!</p>
 </body>
 </html>
