--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>​سیاست حفظ حریم خصوصی</title>
 </head>
 <body>
-    <h1>سلام و به بازی مَش لات خوش آمدید! حفظ حریم خصوصی شما برای ما اهمیت زیادی دارد. این سیاست توضیح می‌دهد که ما چه اطلاعاتی را جمع‌آوری می‌کنیم و چگونه از آن‌ها استفاده می‌کنیم تا بهترین تجربه بازی را برای شما فراهم کنیم.</h1>
+    <h1>سلام و به بازی مشَ لات خوش آمدید! حفظ حریم خصوصی شما برای ما اهمیت زیادی دارد. این سیاست توضیح می‌دهد که ما چه اطلاعاتی را جمع‌آوری می‌کنیم و چگونه از آن‌ها استفاده می‌کنیم تا بهترین تجربه بازی را برای شما فراهم کنیم.</h1>
     <h2>اطلاعاتی که ما جمع آوری می کنیم</h2>
-<p>​در بازی مَش لات، ما برخی اطلاعات را برای ثبت نام و امکانات بیشتر از شما دریافت می‌کنیم. این اطلاعات شامل موارد زیر است:</p>
+<p>​در بازی مشَ لات، ما برخی اطلاعات را برای ثبت نام و امکانات بیشتر از شما دریافت می‌کنیم. این اطلاعات شامل موارد زیر است:</p>
 <p>​نام کاربری پو: ما برای تشخیص و شناسایی پو شما در بازی، نامی که برای او انتخاب کرده‌اید را ذخیره می‌کنیم.</p>
 <p>​آدرس ایمیل: ایمیل شما برای ایجاد حساب کاربری، بازیابی رمز عبور و برقراری ارتباط با شما در مورد به‌روزرسانی‌های مهم بازی جمع‌آوری می‌شود.</p>
 <p>سال تولد: ما سال تولد شما را برای تأیید سن و اطمینان از اینکه بازی برای شما مناسب است، جمع‌آوری می‌کنیم.</p>
@@ -23,6 +23,6 @@
 <p>ما هیچ اطلاعاتی را با شرکت‌های شخص ثالث، تبلیغ‌کنندگان یا ارائه‌دهندگان خدمات تحلیلی به اشتراک نمی‌گذاریم. اطلاعات بازی شما و اطلاعات حساب کاربری شما نزد ما محفوظ خواهد ماند.</p>
 <h2>ارتباط با ما</h2>
 <p>اگر در مورد سیاست حفظ حریم خصوصی ما سوالی دارید، یا یک اشکال در بازی پیدا کردید و میخواهید گزارش دهید، یا اگر هر نوع سوال دیگری هم دارید، لطفاً با ما در ارتباط باشید. می‌توانید برای ارتباط با ما <a href="mailto:amirabbashasanpour7@gmail.com">اینجا</a> را کلیک کنید.</p>
-<p>​از اینکه مَش لات را بازی می‌کنید، متشکریم!</p>
+<p>​از اینکه مشَ لات را بازی می‌کنید، متشکریم!</p>
 </body>
 </html>
