--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa" dir="rtl">
 <head>
     <title>​سیاست حفظ حریم خصوصی</title>
     <link rel="stylesheet" href="style.css">
