--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>​سیاست حفظ حریم خصوصی</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 class="center-text">سلام و به مشَ لات خوش آمدید! حفظ حریم خصوصی شما برای ما اهمیت زیادی دارد. این سیاست توضیح می‌دهد که ما چه اطلاعاتی را جمع‌آوری می‌کنیم و چگونه از آن‌ها استفاده می‌کنیم تا بهترین تجربه بازی را برای شما فراهم کنیم.</h1>
